inital commit :gun:

--- a/ansible/Dockerfile
+++ b/ansible/Dockerfile
@@ -7,30 +7,33 @@ FROM python:3.6.9-alpine3.10
 MAINTAINER Kevin Sandermann <kevin.sandermann@gmail.com>
 LABEL maintainer="kevin.sandermann@gmail.com"
 
+ARG ANSIBLE_VERSION
+
+#install general requirements
+RUN apk update && \
+    apk add \
+    gcc \
+    libffi-dev \
+    libressl-dev \
+    make \
+    musl-dev \
+    openssl-dev \
+    python3-dev
+
+
+#shoutout to https://github.com/pyca/cryptography/issues/4264#issuecomment-392781146
+
 #update pip
 RUN pip3 install pip --upgrade
 
-#install required pip packages
-RUN pip3 install wheel setuptools
+#install pip dependencies
+RUN pip3 install \
+    cryptography \
+    pycrypto
 
-#install crypthography + required apk packages
-#shoutout to https://github.com/pyca/cryptography/issues/4264#issuecomment-392781146
-RUN set -e; \
-  apk update \
-  && apk add --virtual .build-deps gcc python3-dev musl-dev libffi-dev \
-  # TODO workaround start
-  && apk del libressl-dev \
-  && apk add openssl-dev \
-  && pip3 install cryptography pycrypto \
-  && apk del openssl-dev \
-  && apk add libressl-dev \
-  # TODO workaround end
-  && apk del .build-deps
-
-#install ansible + common requirements
+#install common requirements separately to have this as a fix image layer and to prevent ansible-lint from updateing ansible
 RUN pip3 install \
     ansible-lint \
-    ansible==$ANSIBLE_VERSION \
     hvac \
     jinja2==2.10 \
     jmespath \
@@ -39,7 +42,10 @@ RUN pip3 install \
     pbr==5.1.1 \
     pip \
     pyOpenSSL \
-    pyvmomi && \
+    pyvmomi
+
+RUN pip3 install \
+    ansible==$ANSIBLE_VERSION && \
     ansible --version
 
 WORKDIR /root/project
