--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,6 @@ jobs:
           docker build \
                   --pull \
                   --build-arg ANSIBLE_VERSION=2.9.0 \
-                  -t ksandermann/ansible:$ANSBLE_VERSION \
+                  -t ksandermann/ansible:2.9.0 \
                   -f ansible/Dockerfile
                   ./ansible
