--- a/kubectl/Dockerfile
+++ b/kubectl/Dockerfile
@@ -9,10 +9,10 @@ FROM ksandermann/multistage-builder:$BUILDER_VERSION as builder
 MAINTAINER Kevin Sandermann <kevin.sandermann@gmail.com>
 LABEL maintainer="kevin.sandermann@gmail.com"
 
+ARG TARGETARCH
 ARG KUBECTL_VERSION
 
-RUN if [[$(uname -m) == "aarch64"]]; then ARCH="arm64"; else ARCH="amd64"; fi && \
-    wget https://dl.k8s.io/release/$KUBECTL_VERSION/bin/linux/$ARCH/kubectl -O /root/download/kubectl
+RUN wget https://dl.k8s.io/release/$KUBECTL_VERSION/bin/linux/$TARGETARCH/kubectl -O /root/download/kubectl
 
 ######################################################### IMAGE ########################################################
 FROM bash:5.1.16
