--- a/helm/Dockerfile
+++ b/helm/Dockerfile
@@ -9,17 +9,20 @@ FROM ksandermann/multistage-builder:$BUILDER_VERSION as builder
 MAINTAINER Kevin Sandermann <kevin.sandermann@gmail.com>
 LABEL maintainer="kevin.sandermann@gmail.com"
 
+ARG TARGETARCH
 ARG HELM_VERSION
 
-RUN curl -SsL --retry 5 "https://get.helm.sh/helm-$HELM_VERSION-linux-amd64.tar.gz" | tar xz
+RUN curl -SsL --retry 5 "https://get.helm.sh/helm-$HELM_VERSION-linux-$TARGETARCH.tar.gz" | tar xz
 
 
 ######################################################### IMAGE ########################################################
-FROM bash:5.0.17
+FROM bash:5.1.16
 MAINTAINER Kevin Sandermann <kevin.sandermann@gmail.com>
 LABEL maintainer="kevin.sandermann@gmail.com"
 
-COPY --from=builder "/root/download/linux-amd64/helm" "/usr/local/bin/helm"
+ARG TARGETARCH
+
+COPY --from=builder "/root/download/linux-$TARGETARCH/helm" "/usr/local/bin/helm"
 
 RUN chmod +x "/usr/local/bin/helm" && \
     helm version --client
