deprecated oc-cli, built ansible

--- a/openshift-cli/Dockerfile
+++ b/openshift-cli/Dockerfile
@@ -15,7 +15,7 @@ ARG OC_CLI_VERSION
 WORKDIR /root/download
 RUN mkdir -p oc_cli && \
     curl -SsL --retry 5 -o oc_cli.tar.gz https://mirror.openshift.com/pub/openshift-v4/$TARGETARCH/clients/ocp/stable/openshift-client-linux-$OC_CLI_VERSION.tar.gz && \
-    tar xvf oc_cli.tar.gz -C oc_cli
+    tar xvf oc_cli.tar.gz -C oc_cli && ls /root/download/oc_cli && asdf
 
 
 ######################################################### IMAGE ########################################################
@@ -25,6 +25,8 @@ LABEL maintainer="kevin.sandermann@gmail.com"
 
 COPY --from=builder "/root/download/oc_cli/oc" "/usr/local/bin/oc"
 
-RUN chmod +x "/usr/local/bin/oc"
+USER root
+RUN chmod +x "/usr/local/bin/oc" && echo $PATH && \
+    /usr/local/bin/oc version --client
 
 CMD ["oc"]
