2022-08-25 - added arm64 support (#9)
* multi-arch all 22-08-25

* deprecated oc-cli, built ansible

Co-authored-by: Kevin Sandermann <kevin.sandermann@DE-M087957.local>

--- a/openshift-cli/Dockerfile
+++ b/openshift-cli/Dockerfile
@@ -1,7 +1,7 @@
 ######################################################### TOOLCHAIN VERSIONING #########################################
 
 ARG BUILDER_VERSION
-ARG OC_CLI_SOURCE
+ARG OC_CLI_VERSION
 
 ######################################################### BUILDER ######################################################
 
@@ -9,22 +9,24 @@ FROM ksandermann/multistage-builder:$BUILDER_VERSION as builder
 MAINTAINER Kevin Sandermann <kevin.sandermann@gmail.com>
 LABEL maintainer="kevin.sandermann@gmail.com"
 
-ARG OC_CLI_SOURCE
+ARG TARGETARCH
+ARG OC_CLI_VERSION
 
-RUN touch oc_cli.tar.gz && \
-    mkdir -p oc_cli && \
-    curl -SsL --retry 5 -o oc_cli.tar.gz $OC_CLI_SOURCE && \
-    tar xf oc_cli.tar.gz -C oc_cli && \
-    cp oc_cli/*/* oc_cli
+WORKDIR /root/download
+RUN mkdir -p oc_cli && \
+    curl -SsL --retry 5 -o oc_cli.tar.gz https://mirror.openshift.com/pub/openshift-v4/$TARGETARCH/clients/ocp/stable/openshift-client-linux-$OC_CLI_VERSION.tar.gz && \
+    tar xvf oc_cli.tar.gz -C oc_cli && ls /root/download/oc_cli && asdf
 
 
 ######################################################### IMAGE ########################################################
-FROM bash:5.0.7
+FROM bash:5.1.16
 MAINTAINER Kevin Sandermann <kevin.sandermann@gmail.com>
 LABEL maintainer="kevin.sandermann@gmail.com"
 
 COPY --from=builder "/root/download/oc_cli/oc" "/usr/local/bin/oc"
 
-RUN chmod +x "/usr/local/bin/oc"
+USER root
+RUN chmod +x "/usr/local/bin/oc" && echo $PATH && \
+    /usr/local/bin/oc version --client
 
 CMD ["oc"]
