--- a/.github/workflows/build_multistage.yaml
+++ b/.github/workflows/build_multistage.yaml
@@ -1,10 +1,10 @@
 name: Build Multistage-Builder Image
 run-name: ${{ github.actor }} is BUILDING Multistage-Builder Image 🚀
-on: workflow_dispatch
-#  schedule:
-#    #UTC - https://docs.github.com/en/actions/using-workflows/events-that-trigger-workflows#schedule
-#    - cron: '18 3 * * WED'
-#    - cron: '18 3 * * SUN'
+on:
+  schedule:
+    #UTC - https://docs.github.com/en/actions/using-workflows/events-that-trigger-workflows#schedule
+    - cron: '18 3 * * WED'
+    - cron: '18 3 * * SUN'
 jobs:
   Clean-Repo:
     runs-on: [self-hosted, Linux, X64]
